Modifications to class names

--- a/sample-app/.vscode/launch.json
+++ b/sample-app/.vscode/launch.json
@@ -14,7 +14,7 @@
             "sourceMapPathOverrides": {
                 "webpack:///src/*": "${webRoot}/*"
             },
-            "preLaunchTask": "serve"
+            // "preLaunchTask": "serve"
         }
     ]
 }
