--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "vuetify": "2.3.10"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "7.11.5",
+    "@commitlint/cli": "11.0.0",
+    "@commitlint/config-conventional": "11.0.0",
     "@vue/cli-plugin-babel": "4.5.4",
     "@vue/cli-plugin-eslint": "4.5.4",
     "@vue/cli-plugin-unit-jest": "4.5.4",
@@ -38,8 +41,11 @@
     "@vue/test-utils": "1.0.5",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.9.0",
+    "coveralls": "2.11.16",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "husky": "4.3.0",
     "jest": "^24.9.0",
     "jest-junit": "^10.0.0",
     "jest-serializer-vue": "^2.0.2",
@@ -49,12 +55,7 @@
     "vue-jest": "3.0.6",
     "vue-template-compiler": "2.6.12",
     "vuetify-loader": "1.6.0",
-    "webpack": "4.44.1",
-    "coveralls": "2.11.16",
-    "cz-conventional-changelog": "3.3.0",
-    "@commitlint/cli": "11.0.0",
-    "@commitlint/config-conventional": "11.0.0",
-    "husky": "4.3.0"
+    "webpack": "4.44.1"
   },
   "husky": {
     "hooks": {
