added fundamental-styled checkbox gui question type

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --target lib --name form src/index.js",
     "build-wc": "vue-cli-service build --target wc --name inquirer-gui src/InquirerGUI.vue --inline-vue",
-    "build-for-sample": "vue-cli-service build --target lib --name form src/index.js --dest sample-app/form",
+    "build-for-sample": "vue-cli-service build --target lib --name inquirer-gui src/index.js --dest sample-app/form",
     "build-dev": "vue-cli-service build --mode development",
     "lint": "vue-cli-service lint",
     "test": "vue-cli-service test:unit",
