--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   },
   "dependencies": {
     "strip-ansi": "^6.0.0",
-    "vue": "2.6.12",
-    "vuetify": "2.3.10"
+    "vue": "2.6.12"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.12.10",
@@ -51,10 +50,8 @@
     "jest-serializer-vue": "^2.0.2",
     "sass": "1.26.10",
     "sass-loader": "10.0.2",
-    "vue-cli-plugin-vuetify": "2.0.7",
     "vue-jest": "3.0.6",
     "vue-template-compiler": "2.6.12",
-    "vuetify-loader": "1.6.0",
     "webpack": "4.44.1"
   },
   "husky": {
